# Nalana-eval

./: .dockerignore  .gitignore  BENCHMARK_AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MULTI_MODEL_EVALUATION_PLAN.md  Makefile  README.md  README.zh.md  VOICE_TRANSLATION_AUDIT.md  __init__.py  bench.py  conftest.py  docker-compose.yml  executor.py  metrics_evaluator.py  model_runners.py  pyproject.toml  pytest.ini  reporting.py  requirements.txt  schema.py  synthetic_ground_truth.py  test_harness.py  test_run.py
calibration/: README.md  calibrate.py
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  CSV_SCHEMA.md  DECISIONS.md  DECISIONS.zh.md  DESIGN.md  DESIGN.zh.md  HANDOFF_TASK_14.md  HANDOFF_TASK_14.zh.md  IMPLEMENTATION_BRIEF.md  MIGRATION_FROM_V2.md  SYSTEM_MAP.md  SYSTEM_MAP.zh.md  TEST_CASE_AUTHORING.md  USAGE_GUIDE.md  USAGE_GUIDE.zh.md
docs/handoffs/: 2026-04-28-wizard-cli-handoff.md  2026-04-29-post-merge-cleanup.md  2026-04-30-adr-005-taxonomy.md  2026-05-02-13.1-schema-fields.md  2026-05-02-15.1-schema-fields.md  2026-05-02-15.2-audit-decisions.md  _TEMPLATE.md  (+5 more)
fixtures/: sample_cases.json  sample_cases_v2.json
nalana_eval/: cli.py  contracts.py  csv_db.py  dispatcher.py  evaluator.py  harness.py  history.py  judge.py  legacy_schema.py  reporting.py  review.py  scene_capture.py  schema.py  screenshot.py
prompts/: eval_default.md  judge_prompt.md  nalana_prod.md
scripts/: setup-git-hooks.sh
tests/: test_bench.py  test_blender_worker.py  test_contracts.py  test_csv_db.py  test_e2e_smoke.py  test_evaluator.py  test_judge.py  test_schema.py
(+29 files in other folders)
